--- a/OpenCV/maxobjects.ipynb
+++ b/OpenCV/maxobjects.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "#In this program we will try to find the keyframe which has the maximum number of objects"
    ]
   },
   {
