--- a/OpenCV/detectnumberplate.ipynb
+++ b/OpenCV/detectnumberplate.ipynb
@@ -297,8 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KA 05 NB 1786\n",
-      "\f"
+      "KA05NB1786"
      ]
     },
     {
@@ -313,13 +312,21 @@
     }
    ],
    "source": [
-    "os.system('cat out.txt')"
+    "os.system('cat out.txt | perl -ne \" print if /^.*?\\D+\\K[A-Z].*?$/ \" | perl -pe \"s/[^\\p{PosixAlnum},]//g\" ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d0d09409",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1599eaf",
    "metadata": {},
    "outputs": [],
    "source": []
